--- a/MarketPricingSystem/MarketPricingSystem/Views/Shared/_LayoutPageUser.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Shared/_LayoutPageUser.cshtml
@@ -1,4 +1,15 @@
-﻿<!DOCTYPE html>
+﻿@{ 
+
+    var cookie = Request.Cookies["Permissions"];
+
+    MarketPricingSystem.security.EncryptandDecrypt ed = new MarketPricingSystem.security.EncryptandDecrypt();
+        var value =  ed.DecryptPassword(cookie.Value);
+    
+
+}
+
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -16,7 +27,7 @@
 
 </head>
 <body class="sb-nav-fixed">
-
+    
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
         <!-- Navbar Brand-->
         <a class="navbar-brand ps-3" href="/Users/Dashboard">Welcome Back</a>
@@ -64,51 +75,73 @@
                         <div class="sb-sidenav-menu-heading">Settings</div>
 
 
-
-                        <a class="nav-link" href="/Supermarket/Allsupermarkets">
-                            <div class="sb-nav-link-icon"> <i class="fa-solid fa-cart-shopping"></i></div>
-                            Super Markets
-                        </a>
-
-                        <a class="nav-link" href="/Products/AllProducts">
-                            <div class="sb-nav-link-icon"><i class="fa-brands fa-product-hunt"></i></div>
-                            Products
-                        </a>
-                        <a class="nav-link" href="/Category/AllCategories">
-                            <div class="sb-nav-link-icon"><i class="fa-solid fa-magnifying-glass"></i></div>
-                            Categories
-                        </a>
-                        <a class="nav-link" href="/Supermarketproducts/Allsupermarkets">
-                            <div class="sb-nav-link-icon"><i class="fa-solid fa-money-bill-trend-up"></i> </div>
-                            Super Market Products
-                        </a>
-                        <a class="nav-link" href="/Roles/AllRoles">
-                            <div class="sb-nav-link-icon"><i class="fa-sharp fa-solid fa-lock"></i></div>
-                            Roles
-                        </a>
-                        <a class="nav-link" href="/Permission/Allpermissions">
-                            <div class="sb-nav-link-icon"><i class="fa-sharp fa-solid fa-door-open"></i></div>
-                            Permissions
-                        </a>
-                        <a class="nav-link" href="/Others/Allusers">
-                            <div class="sb-nav-link-icon"><i class="fa-solid fa-user"></i></div>
-                            Users
-                        </a>
+                        @if (value.Contains("viewsupermarket"))
+                        {
+                            <a class="nav-link" href="/Supermarket/Allsupermarkets">
+                                <div class="sb-nav-link-icon"> <i class="fa-solid fa-cart-shopping"></i></div>
+                                Super Markets
+                            </a>
+                        }
 
 
 
-                    </div>
+                        @if (value.Contains("viewproduct"))
+                        {
+
+                            <a class="nav-link" href="/Products/AllProducts">
+                                <div class="sb-nav-link-icon"><i class="fa-brands fa-product-hunt"></i></div>
+                                Products
+                            </a>
+
+                        }
+
+
+
+                        @if (value.Contains("viewcategory"))
+                        {
+                            <a class="nav-link" href="/Category/AllCategories">
+                                <div class="sb-nav-link-icon"><i class="fa-solid fa-magnifying-glass"></i></div>
+                                Categories
+                            </a>
+                        }
+                        @if (value.Contains("viewsp"))
+                        {
+                            <a class="nav-link" href="/Supermarketproducts/Allsupermarkets">
+                                <div class="sb-nav-link-icon"><i class="fa-solid fa-money-bill-trend-up"></i> </div>
+                                Super Market Products
+                            </a>
+                        }
+                        @if (value.Contains("viewroles"))
+                        {
+                            <a class="nav-link" href="/Roles/AllRoles">
+                                <div class="sb-nav-link-icon"><i class="fa-sharp fa-solid fa-lock"></i></div>
+                                Roles
+                            </a>
+                        }
+
+
+                        @if (value.Contains("viewpermissions"))
+                        {
+                            <a class="nav-link" href="/Permission/Allpermissions">
+                                <div class="sb-nav-link-icon"><i class="fa-sharp fa-solid fa-door-open"></i></div>
+                                Permissions
+                            </a>
+                        }
+                        @if (value.Contains("viewusers"))
+                        {
+                            <a class="nav-link" href="/Others/Allusers">
+                                <div class="sb-nav-link-icon"><i class="fa-solid fa-user"></i></div>
+                                Users
+                            </a>
+                        }
+
+
+                        </div>
 
 
 
 
                 </div>
-
-
-
-
-
-
 
 
                 <div class="sb-sidenav-footer">
