--- a/MarketPricingSystem/MarketPricingSystem/Views/Roles/Createrole.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Roles/Createrole.cshtml
@@ -16,38 +16,36 @@
                     <div class="card-header"><h3 class="text-center font-weight-light my-4">Add new Role</h3></div>
                     <div class="card-body">
 
+                        <h6 style="color:red;opacity:0.5;display:none" id="pleaseinsert">Please insert role name</h6>
+                        <div class="row mb-3">
+                            <div class="col-md-6">
+                                <div class="form-floating mb-3 mb-md-0">
+                                    <input class="form-control" id="Rolename" onclick="hide()" type="text" name="Rolename" required />
+                                    <label for="Rolename"> Role Name</label>
+                                </div>
+                            </div>
 
-                        <form method="post" action="/Roles/ConfirmCreate">
-                            <h6 style="color:red;opacity:0.5">@TempData["Message1"]</h6>
-                            <div class="row mb-3">
+                        </div>
+
+
+
+
+
+                        <div class="row mb-3">
+
+
+                            @foreach (var permission in Model)
+                            {
+
                                 <div class="col-md-6">
-                                    <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="Rolename" type="text" name="Rolename" required />
-                                        <label for="Rolename"> Role Name</label>
-                                    </div>
+
+                                    <input style=" cursor: pointer;" class="form-check-input checkk" type="checkbox" id="@permission.PermissionName" name="@permission.PermissionName" value="@permission.PermissionId">
+                                    <label style=" cursor: pointer;" for="@permission.PermissionName"> @permission.PermissionName</label><br>
+
                                 </div>
 
-                            </div>
 
-
-
-
-
-                            <div class="row mb-3">
-
-
-                                @foreach (var permission in Model)
-                                {
-
-                                    <div class="col-md-6">
-
-                                        <input style=" cursor: pointer;" class="form-check-input" type="checkbox" id="@permission.PermissionName" name="@permission.PermissionName" value="@permission.PermissionId">
-                                        <label style=" cursor: pointer;" for="@permission.PermissionName"> @permission.PermissionName</label><br>
-
-                                    </div>
-
-
-                                }
+                            }
 
 
 
@@ -55,12 +53,12 @@
 
 
 
-                            </div>
+                        </div>
 
-                            <div class="mt-4 mb-0">
-                                <div class="d-grid"> <button type="submit" class="btn btn-primary"> Add</button> </div>
-                            </div>
-                        </form>
+                        <div class="mt-4 mb-0">
+                            <div class="d-grid"> <button type="submit" class="btn btn-primary"> Add</button> </div>
+                        </div>
+
 
 
 
@@ -71,3 +69,116 @@
         </div>
     </div>
 </main>
+
+
+@section scripts{
+
+    <script src="~/Scripts/sweetalert2@11.js"></script>
+    <script>
+
+
+
+
+        function hide() {
+
+            var pleaseinsert = document.getElementById('pleaseinsert');
+            pleaseinsert.style.display = "none";
+
+        }
+
+
+
+
+
+
+        $('button').click(function () {
+
+
+
+            var rolename = document.getElementById('Rolename').value;
+
+            if (rolename == "") {
+
+                var pleaseinsert = document.getElementById('pleaseinsert');
+                pleaseinsert.style.display = "block";
+
+            }
+            else {
+
+                var data = rolename + ",";
+
+                var allcheckbox = document.getElementsByClassName("checkk");
+
+
+                for (var checkedone of allcheckbox) {
+
+                    if (checkedone.checked) {
+
+                        data += checkedone.value + ",";
+                    }
+
+
+                }
+                data = data.substring(0, data.length - 1);
+
+
+
+                $.ajax
+                    ({
+                        type: 'POST',
+                        dataType: 'JSON',
+                        url: '/Roles/ConfirmCreate',
+                        data: { Data: data },
+                        //here if request is successfully send then its success but we want to see the response after a successful request
+                        success: function (response) {
+                            if (response.success) {
+
+                                Swal.fire({
+                                    position: 'top-end',
+                                    icon: 'success',
+                                    title: response.responseText,
+                                    showConfirmButton: false,
+                                    timer: 1500
+                                })
+
+
+                            }
+                            else {
+                                Swal.fire({
+                                    icon: 'error',
+                                    title: 'Oops...',
+                                    text: response.responseText,
+
+                                })
+
+
+                            }
+                        },
+                          error: function () {
+                              Swal.fire({
+                                  icon: 'error',
+                                  title: 'Oops...',
+                             
+
+                              })
+                        }
+
+                    })
+            }
+
+
+
+        })
+
+
+
+
+
+
+
+
+
+    </script>
+
+
+}
