--- a/MarketPricingSystem/MarketPricingSystem/Views/Roles/Updaterole.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Roles/Updaterole.cshtml
@@ -17,64 +17,64 @@
                     <div class="card-body">
 
 
-                        <form method="post" action="/Roles/Confirmupdate">
 
-                            <input type="hidden" value="@Model.role.RoleId" name="roleid"/>
-                            <h6 style="color:red;opacity:0.5">@TempData["Message1"]</h6>
-                            <div class="row mb-3">
-                                <div class="col-md-6">
-                                    <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="Rolename" type="text" name="Rolename" value="@Model.role.RoleName" required />
-                                        <label for="Rolename"> Role Name</label>
-                                    </div>
+                        <input type="hidden" value="@Model.role.RoleId" id="roleid" name="roleid" />
+
+                        <h6 style="color:red;opacity:0.5;display:none" id="pleaseinsert">Please insert role name</h6>
+                        <div class="row mb-3">
+                            <div class="col-md-6">
+                                <div class="form-floating mb-3 mb-md-0">
+                                    <input class="form-control" id="Rolename" type="text" name="Rolename" onclick="hide()" value="@Model.role.RoleName" required />
+                                    <label for="Rolename"> Role Name</label>
                                 </div>
-
                             </div>
 
+                        </div>
 
 
-                           
-
-                            <div class="row mb-3">
 
 
-                                @foreach (var permission in Model.permissions)
-                                {
-                                    var flag = true;
-                                    <div class="col-md-6">
 
-                                        @foreach (var checkedperm in Model.checkedpermissionsid)
+                        <div class="row mb-3">
+
+
+                            @foreach (var permission in Model.permissions)
+                            {
+                                var flag = true;
+                                <div class="col-md-6">
+
+                                    @foreach (var checkedperm in Model.checkedpermissionsid)
+                                    {
+
+
+
+                                        if (permission.PermissionId == checkedperm.PermissionId)
                                         {
-
-
-
-                                            if (permission.PermissionId == checkedperm.PermissionId)
-                                            {
-                                                <input style=" cursor: pointer;" class="form-check-input" type="checkbox" id="@permission.PermissionName" name="@permission.PermissionName" checked value="@permission.PermissionId">
-
-                                                <label style=" cursor: pointer;" for="@permission.PermissionName"> @permission.PermissionName</label><br>
-
-                                                flag = false;
-
-                                            }
-
-
-                                        }
-
-                                        @if (flag == true)
-                                        {
-                                            <input style=" cursor: pointer;" class="form-check-input" type="checkbox" id="@permission.PermissionName" name="@permission.PermissionName" value="@permission.PermissionId">
+                                            <input style=" cursor: pointer;" class="form-check-input checkk" type="checkbox" id="@permission.PermissionName" name="@permission.PermissionName" checked value="@permission.PermissionId">
 
                                             <label style=" cursor: pointer;" for="@permission.PermissionName"> @permission.PermissionName</label><br>
 
+                                            flag = false;
+
                                         }
 
 
+                                    }
 
-                                    </div>
+                                    @if (flag == true)
+                                    {
+                                        <input style=" cursor: pointer;" class="form-check-input checkk" type="checkbox" id="@permission.PermissionName" name="@permission.PermissionName" value="@permission.PermissionId">
+
+                                        <label style=" cursor: pointer;" for="@permission.PermissionName"> @permission.PermissionName</label><br>
+
+                                    }
 
 
-                                }
+
+                                </div>
+
+
+                            }
 
 
 
@@ -82,12 +82,12 @@
 
 
 
-                            </div>
+                        </div>
 
-                            <div class="mt-4 mb-0">
-                                <div class="d-grid"> <button type="submit" class="btn btn-primary"> update</button> </div>
-                            </div>
-                        </form>
+                        <div class="mt-4 mb-0">
+                            <div class="d-grid"> <button type="submit" class="btn btn-primary"> update</button> </div>
+                        </div>
+
 
 
 
@@ -98,3 +98,114 @@
         </div>
     </div>
 </main>
+
+
+
+@section scripts{
+
+    <script src="~/Scripts/sweetalert2@11.js"></script>
+    <script>
+
+
+
+
+        function hide() {
+
+            var pleaseinsert = document.getElementById('pleaseinsert');
+            pleaseinsert.style.display = "none";
+
+        }
+
+
+
+
+
+
+        $('button').click(function () {
+
+
+
+            var rolename = document.getElementById('Rolename').value;
+
+            if (rolename == "") {
+
+                var pleaseinsert = document.getElementById('pleaseinsert');
+                pleaseinsert.style.display = "block";
+
+            }
+            else {
+
+                var roleid = document.getElementById("roleid").value;
+                var data = rolename + "," + roleid + ",";
+
+                var allcheckbox = document.getElementsByClassName("checkk");
+
+
+                for (var checkedone of allcheckbox) {
+
+                    if (checkedone.checked) {
+
+                        data += checkedone.value + ",";
+                    }
+
+
+                }
+                data = data.substring(0, data.length - 1);
+
+
+
+                $.ajax
+                    ({
+                        type: 'POST',
+                        dataType:'JSON',
+                        url: '/Roles/Confirmupdate',
+                        data: { Data: data },
+                        //here if request is successfully send then its success but we want to see the response after a successful request
+                        success: function (response) {
+                            if (response.success) {
+
+                                Swal.fire({
+                                    position: 'top-end',
+                                    icon: 'success',
+                                    title: response.responseText,
+                                    showConfirmButton: false,
+                                    timer: 1500
+                                })
+                            }
+                            else {
+                                Swal.fire({
+                                    icon: 'error',
+                                    title: 'Oops...',
+                                    text: response.responseText,
+
+                                })
+                            }
+                        },
+                        error: function () {
+                            Swal.fire({
+                                icon: 'error',
+                                title: 'Oops something wrong...',
+                                 text: 'Please go back to role list page and try agian' ,
+
+                            })
+                        }
+
+                    })
+            }
+
+
+
+        })
+
+
+
+
+
+
+
+
+
+    </script>
+
+
+}
